@@ -2,6 +2,8 @@ Revision history for Perl extension Apache::Singleton.
 
 {{$NEXT}}
     - fix signature test due to MYMETA.* in new EU::MM
+    - Work around global destruction order issue by integrating on proposed
+      patch to Class::Singleton [#68534] (Thanks Steve Hay!)
 
 0.15  2012-04-02
     - fixed test: limit MaxClient to 1. process/printer_instance.t expects the
